--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>java-beans-demo</module>
         <module>ioc-container-overview</module>
+        <module>spring-bean</module>
     </modules>
     <packaging>pom</packaging>
 
