Spring IoC依赖查找的特性（单一类型/集合类型/层次性）

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>java-beans-demo</module>
         <module>ioc-container-overview</module>
         <module>spring-bean</module>
+        <module>dependency-lookup</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -21,6 +22,12 @@
 
     <!-- Spring 依赖 -->
     <dependencies>
+        <!-- Spring IoC 核心依赖 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
