--- a/dependency-lookup/pom.xml
+++ b/dependency-lookup/pom.xml
@@ -6,14 +6,17 @@
         <artifactId>thinking-in-spring</artifactId>
         <groupId>org.zxb</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ioc-container-overview</artifactId>
-    <description>IoC 容器总览</description>
+    <artifactId>dependency-lookup</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.zxb</groupId>
+            <artifactId>ioc-container-overview</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
 </project>
