--- a/dependency-injection/pom.xml
+++ b/dependency-injection/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dependency-lookup</artifactId>
+    <artifactId>dependency-injection</artifactId>
 
     <dependencies>
         <dependency>
