--- a/dependency-injection/pom.xml
+++ b/dependency-injection/pom.xml
@@ -17,6 +17,13 @@
             <artifactId>ioc-container-overview</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
 
     <build>
