Spring Bean 作用域以及 singleton scope 和 prototype scope 示例

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>dependency-lookup</module>
         <module>dependency-injection</module>
         <module>dependency-source</module>
+        <module>bean-scope</module>
     </modules>
     <packaging>pom</packaging>
 
