Spring Bean 元信息配置

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>dependency-injection</module>
         <module>dependency-source</module>
         <module>bean-scope</module>
+        <module>bean-lifecycle</module>
     </modules>
     <packaging>pom</packaging>
 
