--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <spring.version>5.2.7.RELEASE</spring.version>
+        <spring.version>5.3.39</spring.version>
     </properties>
 
     <!-- Spring 依赖 -->
